--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </nav>
 
 
-            <!-- E-mail and phone No. contacts -->
+            <!-- E-mail  phone  links-->
           <div class="contacts">
             <a class="contacts__link-tel" href="tel:+380961111111">
               <svg class="contacts__icon-smartphone">
@@ -489,7 +489,6 @@
         <div class="footer__sign-form">
           <p class="footer__head">Подпишитесь на рассылку</p>
           <form action="#" class="footer-form">
-            <div class="footer-form__wrapper">
               <input type="email" class="footer-form__input" name="user-email" placeholder="E-mail" />
               <button type="submit" class="footer-form__button button">
                 Подписаться
@@ -497,7 +496,6 @@
                   <use href="./images/sprite.svg#icon-icon-send"></use>
                 </svg>
               </button>
-            </div>
           </form>
         </div>
       </div>
