--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
               <h3 class="about__title">Десктопные приложения</h3>
               <img
                 srcset="
-                  ../images/about/about-img1.jpg  1x,
-                  ../images/about/about-img1@2x.jpg  2x
+                  ./images/about/about-img1.jpg  1x,
+                  ./images/about/about-img1@2x.jpg  2x
                   "
                 src="../images/about/about-img1.jpg"
                 alt="кто-то печатает на клавиатуре"
@@ -184,8 +184,8 @@
               <h3 class="about__title">Мобильные приложения</h3>
               <img
                 srcset="
-                  ../images/about/about-img2.jpg  1x,
-                  ../images/about/about-img2@2x.jpg  2x,
+                  ./images/about/about-img2.jpg  1x,
+                  ./images/about/about-img2@2x.jpg  2x,
                 "
                 src="../images/about/about-img2.jpg"
                 alt="кто-то держит телефон"
@@ -196,8 +196,8 @@
               <h3 class="about__title">Дизайнерские решения</h3>
               <img
                 srcset="
-                  ../images/about/about-img3.jpg  1x,
-                  ../images/about/about-img3@2x.jpg  2x,
+                  ./images/about/about-img3.jpg  1x,
+                  ./images/about/about-img3@2x.jpg  2x,
                 "
                 src="../images/about/about-img3.jpg"
                 alt="кто-то держит планшет"
