--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
               <h3 class="about__title">Мобильные приложения</h3>
               <img
                 srcset="
-                  ./images/about/about-img2.jpg  1x,
-                  ./images/about/about-img2@2x.jpg  2x,
+                  /images/about/about-img2.jpg  1x,
+                  /images/about/about-img2@2x.jpg  2x,
                 "
                 src="../images/about/about-img2.jpg"
                 alt="кто-то держит телефон"
@@ -258,7 +258,7 @@
               <img
                 class="team__picture"
                 srcset="../images/team/img-team-mobile/team-img2.jpg 1x, ../images/team/img-team-mobile/team-img2.jpg 2x"
-                src="../images/team/img-team-mobile/team-img2.jpg"
+                src="/images/team/img-team-mobile/team-img2.jpg"
                 alt="Фото Ольги Репиной"
                 width="450"
               />
