--- a/portfolio.html
+++ b/portfolio.html
@@ -124,9 +124,9 @@
                     <!-- PC pictures WebP & JPG -->
                     <source
                       srcset="
-                        ../images/portfolio/pc/pc-technokryak-370.webp   370w,
-                        ../images/portfolio/pc/pc-technokryak-740.webp   740w,
-                        ../images/portfolio/pc/pc-technokryak-1110.webp 1110w
+                        ./images/portfolio/pc/pc-technokryak-370.webp   370w,
+                        ./images/portfolio/pc/pc-technokryak-740.webp   740w,
+                        ./images/portfolio/pc/pc-technokryak-1110.webp 1110w
                       "
                       type="image/webp"
                       media="(min-width: 1200px)"
@@ -135,9 +135,9 @@
 
                     <source
                       srcset="
-                        ../images/portfolio/pc/pc-technokryak-370.jpg   370w,
-                        ../images/portfolio/pc/pc-technokryak-740.jpg   740w,
-                        ../images/portfolio/pc/pc-technokryak-1110.jpg 1110w
+                        ./images/portfolio/pc/pc-technokryak-370.jpg   370w,
+                        ./images/portfolio/pc/pc-technokryak-740.jpg   740w,
+                        ./images/portfolio/pc/pc-technokryak-1110.jpg 1110w
                       "
                       media="(min-width: 1200px)"
                       sizes="(min-width: 1200px) 370px, 100vw"
@@ -146,9 +146,9 @@
                     <!-- Tablet pictures WebP & JPG -->
                     <source
                       srcset="
-                        ../images/portfolio/tablet/tablet-technokryak-354.webp   354w,
-                        ../images/portfolio/tablet/tablet-technokryak-708.webp   708w,
-                        ../images/portfolio/tablet/tablet-technokryak-1062.webp 1062w
+                        ./images/portfolio/tablet/tablet-technokryak-354.webp   354w,
+                        ./images/portfolio/tablet/tablet-technokryak-708.webp   708w,
+                        ./images/portfolio/tablet/tablet-technokryak-1062.webp 1062w
                       "
                       type="image/webp"
                       media="(min-width: 768px)"
@@ -157,9 +157,9 @@
 
                     <source
                       srcset="
-                        ../images/portfolio/tablet/tablet-technokryak-354.jpg   354w,
-                        ../images/portfolio/tablet/tablet-technokryak-708.jpg   708w,
-                        ../images/portfolio/tablet/tablet-technokryak-1062.jpg 1062w
+                        ./images/portfolio/tablet/tablet-technokryak-354.jpg   354w,
+                        ./images/portfolio/tablet/tablet-technokryak-708.jpg   708w,
+                        ./images/portfolio/tablet/tablet-technokryak-1062.jpg 1062w
                       "
                       media="(min-width: 768px)"
                       sizes="(min-width: 768px) 354px, 100vw"
@@ -168,9 +168,9 @@
                     <!-- Mobile WEBP pictures -->
                     <source
                       srcset="
-                        ../images/portfolio/mobile/mobile-technokryak-450.webp   450w,
-                        ../images/portfolio/mobile/mobile-technokryak-900.webp   900w,
-                        ../images/portfolio/mobile/mobile-technokryak-1350.webp 1350w
+                        ./images/portfolio/mobile/mobile-technokryak-450.webp   450w,
+                        ./images/portfolio/mobile/mobile-technokryak-900.webp   900w,
+                        ./images/portfolio/mobile/mobile-technokryak-1350.webp 1350w
                       "
                       type="image/webp"
                       media="(max-width: 767px)"
@@ -180,11 +180,11 @@
                     <!-- Mobile standart JPG pics -->
                     <img
                       srcset="
-                        ../images/portfolio/mobile/mobile-technokryak-450.jpg   450w,
-                        ../images/portfolio/mobile/mobile-technokryak-900.jpg   900w,
-                        ../images/portfolio/mobile/mobile-technokryak-1350.jpg 1350w
+                        ./images/portfolio/mobile/mobile-technokryak-450.jpg   450w,
+                        ./images/portfolio/mobile/mobile-technokryak-900.jpg   900w,
+                        ./images/portfolio/mobile/mobile-technokryak-1350.jpg 1350w
                       "
-                      src="../images/portfolio/mobile/mobile-technokryak-450.jpg"
+                      src="./images/portfolio/mobile/mobile-technokryak-450.jpg"
                       alt="технокряк"
                       media="(max-width: 767px)"
                       sizes="(max-width: 767px) 450px, 100vw"
