--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
               <h3 class="about__title">Мобильные приложения</h3>
               <img
                 srcset="
-                  /images/about/about-img2.jpg  1x,
-                  /images/about/about-img2@2x.jpg  2x,
+                  ./images/about/about-img2.jpg  1x,
+                  ./images/about/about-img2@2x.jpg  2x,
                 "
                 src="../images/about/about-img2.jpg"
                 alt="кто-то держит телефон"
@@ -216,8 +216,8 @@
             <li class="team__item">
               <img
                 class="team__picture"
-                srcset="../images/team/img-team-mobile/team-img1.jpg 1x, ../images/team/img-team-mobile/team-img1.jpg 2x"
-                src="../images/team/img-team-mobile/team-img1.jpg"
+                srcset="./images/team/img-team-mobile/team-img1.jpg 1x, ./images/team/img-team-mobile/team-img1.jpg 2x"
+                src="./images/team/img-team-mobile/team-img1.jpg"
                 alt="Фото Игоря Демьяненко"
                 width="450"
               />
@@ -257,8 +257,8 @@
             <li class="team__item">
               <img
                 class="team__picture"
-                srcset="../images/team/img-team-mobile/team-img2.jpg 1x, ../images/team/img-team-mobile/team-img2.jpg 2x"
-                src="/images/team/img-team-mobile/team-img2.jpg"
+                srcset="./images/team/img-team-mobile/team-img2.jpg 1x, ./images/team/img-team-mobile/team-img2.jpg 2x"
+                src="./images/team/img-team-mobile/team-img2.jpg"
                 alt="Фото Ольги Репиной"
                 width="450"
               />
@@ -298,8 +298,8 @@
             <li class="team__item">
               <img
                 class="team__picture"
-                srcset="../images/team/img-team-mobile/team-img3.jpg 1x, ../images/team/img-team-mobile/team-img3.jpg 2x"
-                src="../images/team/img-team-mobile/team-img3.jpg"
+                srcset="./images/team/img-team-mobile/team-img3.jpg 1x, ./images/team/img-team-mobile/team-img3.jpg 2x"
+                src="./images/team/img-team-mobile/team-img3.jpg"
                 alt="Фото Николая Тарасова"
                 width="450"
               />
@@ -339,8 +339,8 @@
             <li class="team__item">
               <img
                 class="team__picture"
-                srcset="../images/team/img-team-mobile/team-img4.jpg 1x, ../images/team/img-team-mobile/team-img4.jpg 2x"
-                src="../images/team/img-team-mobile/team-img4.jpg"
+                srcset="./images/team/img-team-mobile/team-img4.jpg 1x, ./images/team/img-team-mobile/team-img4.jpg 2x"
+                src="./images/team/img-team-mobile/team-img4.jpg"
                 alt="Фото Михаила Ермакова"
                 width="450"
               />
