fixed after mentor's marks

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
             </ul>
           </nav>
 
-
-            <!-- E-mail  phone  links-->
+          <!-- E-mail  phone  links-->
           <div class="contacts">
             <a class="contacts__link-tel" href="tel:+380961111111">
               <svg class="contacts__icon-smartphone">
@@ -60,45 +59,28 @@
               info@devstudio.com
             </a>
           </div>
-          <ul class="social-menu">
+          <ul class="social-menu list">
             <li class="social-menu__item social-menu__link--border">
-              <a
-                class="social-menu__link"
-                href="https://instagram.com"
-                target="_blank"
-                rel="noopener noreferrer"
+              <a class="social-menu__link" href="https://instagram.com" target="_blank" rel="noopener noreferrer"
                 >Instagram</a
               >
             </li>
             <li class="social-menu__item social-menu__link--border">
-              <a
-                class="social-menu__link"
-                href="https://twitter.com"
-                target="_blank"
-                rel="noopener noreferrer"
+              <a class="social-menu__link" href="https://twitter.com" target="_blank" rel="noopener noreferrer"
                 >Twitter</a
               >
             </li>
             <li class="social-menu__item social-menu__link--border">
-              <a
-                class="social-menu__link"
-                href="https://facebook.com"
-                target="_blank"
-                rel="noopener noreferrer"
+              <a class="social-menu__link" href="https://facebook.com" target="_blank" rel="noopener noreferrer"
                 >Facebook</a
               >
             </li>
             <li class="social-menu__item">
-              <a
-                class="social-menu__link"
-                href="https://linkedin.com"
-                target="_blank"
-                rel="noopener noreferrer"
+              <a class="social-menu__link" href="https://linkedin.com" target="_blank" rel="noopener noreferrer"
                 >LinkedIn</a
               >
             </li>
           </ul>
-        </div>
         </div>
       </div>
     </header>
@@ -171,10 +153,7 @@
             <li class="about__item">
               <h3 class="about__title">Десктопные приложения</h3>
               <img
-                srcset="
-                  ./images/about/about-img1.jpg  1x,
-                  ./images/about/about-img1@2x.jpg  2x
-                  "
+                srcset="./images/about/about-img1.jpg 1x, ./images/about/about-img1@2x.jpg 2x"
                 src="../images/about/about-img1.jpg"
                 alt="кто-то печатает на клавиатуре"
                 width="370"
@@ -183,10 +162,7 @@
             <li class="about__item">
               <h3 class="about__title">Мобильные приложения</h3>
               <img
-                srcset="
-                  ./images/about/about-img2.jpg  1x,
-                  ./images/about/about-img2@2x.jpg  2x,
-                "
+                srcset="./images/about/about-img2.jpg 1x, ./images/about/about-img2@2x.jpg 2x"
                 src="../images/about/about-img2.jpg"
                 alt="кто-то держит телефон"
                 width="370"
@@ -195,10 +171,7 @@
             <li class="about__item">
               <h3 class="about__title">Дизайнерские решения</h3>
               <img
-                srcset="
-                  ./images/about/about-img3.jpg  1x,
-                  ./images/about/about-img3@2x.jpg  2x,
-                "
+                srcset="./images/about/about-img3.jpg 1x, ./images/about/about-img3@2x.jpg 2x"
                 src="../images/about/about-img3.jpg"
                 alt="кто-то держит планшет"
                 width="370"
@@ -437,65 +410,68 @@
     <footer class="footer">
       <div class="footer-container container">
         <div class="footer-left-side">
-         <div class="footer__wrapper-info">
-          <a href="index.html" class="footer__logo link logo">
-            <span class="footer__logo-accent">Web</span><span class="footer-logo">Studio</span></a
-          >
-          <address>
-            <a class="footer__address link"
+          <div class="footer__wrapper-info">
+            <a href="index.html" class="footer__logo link logo">
+              <span class="footer__logo-accent">Web</span><span class="footer-logo">Studio</span></a
+            >
+            <address>
+              <a
+                class="footer__address link"
                 href="https://goo.gl/maps/nL9pkd665aWA4ZFbA"
                 target="_blank"
                 rel="noopener noreferrer"
                 title="Посмотреть на google.maps"
-                >г. Киев, пр-т Леси Украинки, 26</a> <br />
-            <a href="mailto:info@devstudio.com" class="footer__address-link link">info@devstudio.com</a> <br />
-            <a href="tel:+380991111111" class="footer__address-link link">+38 099 111 11 11</a>
-          </address>
-         </div>
-         <div class="footer__wrapper-join">
-          <p class="footer__text">Присоединяйтесь</p>
-          <ul class="social-list footer__social-list">
-            <li class="social-list__item footer__item list">
-              <a href="" class="social-list__link footer__link link">
-                <svg class="social-list__icon footer__icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item footer__item list">
-              <a href="" class="social-list__link footer__link link">
-                <svg class="social-list__icon footer__icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item footer__item list">
-              <a href="" class="social-list__link footer__link link">
-                <svg class="social-list__icon footer__icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item footer__item list">
-              <a href="" class="social-list__link footer__link link">
-                <svg class="social-list__icon footer__icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-         </div>
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+              <br />
+              <a href="mailto:info@devstudio.com" class="footer__address-link link">info@devstudio.com</a> <br />
+              <a href="tel:+380991111111" class="footer__address-link link">+38 099 111 11 11</a>
+            </address>
+          </div>
+          <div class="footer__wrapper-join">
+            <p class="footer__text">Присоединяйтесь</p>
+            <ul class="social-list footer__social-list">
+              <li class="social-list__item footer__item list">
+                <a href="" class="social-list__link footer__link link">
+                  <svg class="social-list__icon footer__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item footer__item list">
+                <a href="" class="social-list__link footer__link link">
+                  <svg class="social-list__icon footer__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item footer__item list">
+                <a href="" class="social-list__link footer__link link">
+                  <svg class="social-list__icon footer__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item footer__item list">
+                <a href="" class="social-list__link footer__link link">
+                  <svg class="social-list__icon footer__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="footer__sign-form">
           <p class="footer__head">Подпишитесь на рассылку</p>
           <form action="#" class="footer-form">
-              <input type="email" class="footer-form__input" name="user-email" placeholder="E-mail" />
-              <button type="submit" class="footer-form__button button">
-                Подписаться
-                <svg class="footer-form__icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-icon-send"></use>
-                </svg>
-              </button>
+            <input type="email" class="footer-form__input" name="user-email" placeholder="E-mail" />
+            <button type="submit" class="footer-form__button button">
+              Подписаться
+              <svg class="footer-form__icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -543,7 +519,7 @@
             <textarea name="user-message" class="form__message" placeholder="Введите текст"></textarea>
           </label>
           <!-- КАСТОМНЫЙ CHECKBOX -->
-    <div class="form-checkbox">
+          <div class="form-checkbox">
             <input type="checkbox" name="user-policy" id="user-policy" class="form-checkbox__input visually-hidden" />
             <label for="user-policy" class="form-checkbox__agree">
               <span class="form-checkbox__wrapper">
@@ -560,7 +536,6 @@
         </form>
       </div>
     </div>
-   
 
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
