--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- HEADER -->
-   <header class="header">
+    <header class="header">
       <div class="container header__container">
         <a href="index.html" class="logo header__logo link"> <span class="logo__accent">Web</span>Studio</a>
         <button class="menu-button" type="button" data-menu-button aria-expanded="false" aria-controls="menu-content">
@@ -44,8 +44,7 @@
             </ul>
           </nav>
 
-
-            <!-- E-mail and phone No. contacts -->
+          <!-- E-mail and phone No. contacts -->
           <div class="contacts">
             <a class="contacts__link-tel" href="tel:+380961111111">
               <svg class="contacts__icon-smartphone">
@@ -60,45 +59,28 @@
               info@devstudio.com
             </a>
           </div>
-          <ul class="social-menu">
+          <ul class="social-menu list">
             <li class="social-menu__item social-menu__link--border">
-              <a
-                class="social-menu__link"
-                href="https://instagram.com"
-                target="_blank"
-                rel="noopener noreferrer"
+              <a class="social-menu__link" href="https://instagram.com" target="_blank" rel="noopener noreferrer"
                 >Instagram</a
               >
             </li>
             <li class="social-menu__item social-menu__link--border">
-              <a
-                class="social-menu__link"
-                href="https://twitter.com"
-                target="_blank"
-                rel="noopener noreferrer"
+              <a class="social-menu__link" href="https://twitter.com" target="_blank" rel="noopener noreferrer"
                 >Twitter</a
               >
             </li>
             <li class="social-menu__item social-menu__link--border">
-              <a
-                class="social-menu__link"
-                href="https://facebook.com"
-                target="_blank"
-                rel="noopener noreferrer"
+              <a class="social-menu__link" href="https://facebook.com" target="_blank" rel="noopener noreferrer"
                 >Facebook</a
               >
             </li>
             <li class="social-menu__item">
-              <a
-                class="social-menu__link"
-                href="https://linkedin.com"
-                target="_blank"
-                rel="noopener noreferrer"
+              <a class="social-menu__link" href="https://linkedin.com" target="_blank" rel="noopener noreferrer"
                 >LinkedIn</a
               >
             </li>
           </ul>
-        </div>
         </div>
       </div>
     </header>
@@ -120,7 +102,7 @@
             <li class="projects__item">
               <a href="" class="projects__link link">
                 <div class="projects__image">
-   <picture>
+                  <picture>
                     <!-- PC pictures WebP & JPG -->
                     <source
                       srcset="
@@ -186,11 +168,10 @@
                       "
                       src="./images/portfolio/mobile/mobile-technokryak-450.jpg"
                       alt="технокряк"
-                      media="(max-width: 767px)"
                       sizes="(max-width: 767px) 450px, 100vw"
                     />
-                  </picture>                 
-                   <div class="projects__overlay">
+                  </picture>
+                  <div class="projects__overlay">
                     <p class="projects__overlay-text">
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                       для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -272,7 +253,6 @@
                       "
                       src="./images/portfolio/mobile/mobile-poster-no-vs-gs-450.jpg"
                       alt="технокряк"
-                      media="(max-width: 767px)"
                       sizes="(max-width: 767px) 450px, 100vw"
                     />
                   </picture>
@@ -358,7 +338,6 @@
                       "
                       src="./images/portfolio/mobile/mobile-seafood-restaurant-450.jpg"
                       alt="технокряк"
-                      media="(max-width: 767px)"
                       sizes="(max-width: 767px) 450px, 100vw"
                     />
                   </picture>
@@ -444,7 +423,6 @@
                       "
                       src="./images/portfolio/mobile/mobile-project-prime-450.jpg"
                       alt="технокряк"
-                      media="(max-width: 767px)"
                       sizes="(max-width: 767px) 450px, 100vw"
                     />
                   </picture>
@@ -530,7 +508,6 @@
                       "
                       src="./images/portfolio/mobile/mobile-project-boxes-450.jpg"
                       alt="технокряк"
-                      media="(max-width: 767px)"
                       sizes="(max-width: 767px) 450px, 100vw"
                     />
                   </picture>
@@ -616,7 +593,6 @@
                       "
                       src="../images/portfolio/mobile/mobile-inspiration-hnb-450.jpg"
                       alt="технокряк"
-                      media="(max-width: 767px)"
                       sizes="(max-width: 767px) 450px, 100vw"
                     />
                   </picture>
@@ -702,7 +678,6 @@
                       "
                       src="./images/portfolio/mobile/mobile-le-publication-450.jpg"
                       alt="технокряк"
-                      media="(max-width: 767px)"
                       sizes="(max-width: 767px) 450px, 100vw"
                     />
                   </picture>
@@ -788,7 +763,6 @@
                       "
                       src="./images/portfolio/mobile/mobile-project-lab-450.jpg"
                       alt="технокряк"
-                      media="(max-width: 767px)"
                       sizes="(max-width: 767px) 450px, 100vw"
                     />
                   </picture>
@@ -874,7 +848,6 @@
                       "
                       src="./images/portfolio/mobile/mobile-growing-business-450.jpg"
                       alt="технокряк"
-                      media="(max-width: 767px)"
                       sizes="(max-width: 767px) 450px, 100vw"
                     />
                   </picture>
@@ -900,70 +873,73 @@
     <footer class="footer">
       <div class="footer-container container">
         <div class="footer-left-side">
-         <div class="footer__wrapper-info">
-          <a href="index.html" class="footer__logo link logo">
-            <span class="footer__logo-accent">Web</span><span class="footer-logo">Studio</span></a
-          >
-          <address>
-            <a class="footer__address link"
+          <div class="footer__wrapper-info">
+            <a href="index.html" class="footer__logo link logo">
+              <span class="footer__logo-accent">Web</span><span class="footer-logo">Studio</span></a
+            >
+            <address>
+              <a
+                class="footer__address link"
                 href="https://goo.gl/maps/nL9pkd665aWA4ZFbA"
                 target="_blank"
                 rel="noopener noreferrer"
                 title="Посмотреть на google.maps"
-                >г. Киев, пр-т Леси Украинки, 26</a> <br />
-            <a href="mailto:info@devstudio.com" class="footer__address-link link">info@devstudio.com</a> <br />
-            <a href="tel:+380991111111" class="footer__address-link link">+38 099 111 11 11</a>
-          </address>
-         </div>
-         <div class="footer__wrapper-join">
-          <p class="footer__text">Присоединяйтесь</p>
-          <ul class="social-list footer__social-list">
-            <li class="social-list__item footer__item list">
-              <a href="" class="social-list__link footer__link link">
-                <svg class="social-list__icon footer__icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item footer__item list">
-              <a href="" class="social-list__link footer__link link">
-                <svg class="social-list__icon footer__icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item footer__item list">
-              <a href="" class="social-list__link footer__link link">
-                <svg class="social-list__icon footer__icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item footer__item list">
-              <a href="" class="social-list__link footer__link link">
-                <svg class="social-list__icon footer__icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-         </div>
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+              <br />
+              <a href="mailto:info@devstudio.com" class="footer__address-link link">info@devstudio.com</a> <br />
+              <a href="tel:+380991111111" class="footer__address-link link">+38 099 111 11 11</a>
+            </address>
+          </div>
+          <div class="footer__wrapper-join">
+            <p class="footer__text">Присоединяйтесь</p>
+            <ul class="social-list footer__social-list">
+              <li class="social-list__item footer__item list">
+                <a href="" class="social-list__link footer__link link">
+                  <svg class="social-list__icon footer__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item footer__item list">
+                <a href="" class="social-list__link footer__link link">
+                  <svg class="social-list__icon footer__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item footer__item list">
+                <a href="" class="social-list__link footer__link link">
+                  <svg class="social-list__icon footer__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list__item footer__item list">
+                <a href="" class="social-list__link footer__link link">
+                  <svg class="social-list__icon footer__icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="footer__sign-form">
           <p class="footer__head">Подпишитесь на рассылку</p>
           <form action="#" class="footer-form">
-              <input type="email" class="footer-form__input" name="user-email" placeholder="E-mail" />
-              <button type="submit" class="footer-form__button button">
-                Подписаться
-                <svg class="footer-form__icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-icon-send"></use>
-                </svg>
-              </button>
+            <input type="email" class="footer-form__input" name="user-email" placeholder="E-mail" />
+            <button type="submit" class="footer-form__button button">
+              Подписаться
+              <svg class="footer-form__icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </footer>
 
-   <script src="./js/menu.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
